Add animated gradient overlay for voice recording with cycling states

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
             
             <!-- AI Assistant View (Hidden by default) -->
             <div class="ai-assistant-view hidden" id="aiAssistantView">
+                <!-- Voice Recording Gradient Overlay -->
+                <div class="voice-recording-gradient hidden" id="voiceGradient"></div>
+                
                 <!-- Empty State -->
                 <div class="welcome-screen" id="welcomeScreen">
                     <h2 class="welcome-title">Ask anything about your group chat</h2>
